	PR bootstrap/36100 	* ipa-inline.c (inline_generate_summary): Make static. 	(inline_transform): Do not call inlining at -O0; make static. 	* passes.c (execute_todo): Add sanity check. 	(execute_one_ipa_transform_pass): Execute proper flags.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@134885 138bc75d-0d04-0410-961f-82ee72b054a4